added callouts with information

--- a/triangulation/triangulation.qmd
+++ b/triangulation/triangulation.qmd
@@ -42,6 +42,11 @@ share:
 
 If viewed on a mobile device, only the text, but not the images, will display.
 :::
+::: {.callout-note}
+## Scroll Down
+
+Please scroll down to view.
+:::
 
 :::{.cr-section}
 :::{focus-on="cr-child-maltreatment" scale-by=".45"}
