added link to OJS tutorial

--- a/index.qmd
+++ b/index.qmd
@@ -14,4 +14,8 @@ format: html
 * [https://globalfamilies.quarto.pub/normativeness-of-violence/](https://globalfamilies.quarto.pub/normativeness-of-violence/)
 * [https://agrogan1.github.io/closeread/triangulation/triangulation.html](https://agrogan1.github.io/closeread/triangulation/triangulation.html)
 
+Not a `closeread` document, but a tutorial on using *OJS*, which can be useful in `closeread` documents:  [https://agrogan1.github.io/closeread/ojs-demo/ojs-demo.html](https://agrogan1.github.io/closeread/ojs-demo/ojs-demo.html)
+
+
+
 
