--- a/empathy/empathy.qmd
+++ b/empathy/empathy.qmd
@@ -6,15 +6,27 @@ author:
   - Andy Grogan-Kaylor
   - Todd Herrenkohl
 date: "today"
-format: html
+format: 
+  closeread-html:
+    cr-style:
+      narrative-text-color-sidebar: black
+      narrative-background-color-overlay: lightgrey
+      narrative-text-color-overlay: black
+      narrative-background-color-sidebar: white
+      section-background-color: white
+css: empathy.css
 ---
 
-**Objective:** Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear. This study examines how empathy relates to the association between early childhood maltreatment and lifetime self-harm thoughts.
+:::{.cr-section}
 
-**Method:** Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models to assess non-linear relationships. Models also controlled for respondents' age, gender, and socio-economic status.
+:::{focus-on="cr-research-question"}
+**Objective:** Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear. 
 
+This study examines how empathy relates to the association between early childhood maltreatment and lifetime self-harm thoughts.
+:::
+
+:::{#cr-research-question .scale-to-fill .center}
 ```{mermaid}
-%%| fig-cap: "study design"
 
 flowchart LR
   
@@ -59,24 +71,95 @@ flowchart LR
   linkStyle 0,1 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
 
 ```
+:::
 
+:::{focus-on="cr-method"}
+**Method:** Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models to assess non-linear relationships. Models also controlled for respondents' age, gender, and socio-economic status.
+:::
+
+:::{#cr-method .scale-to-fill}
+```{mermaid}
+
+flowchart LR
+  
+  subgraph maltreatment
+  
+  direction LR
+  
+  e1("empathy") --> sh1("self harm thoughts")
+  
+  end
+  
+  subgraph nomaltreatment ["no maltreatment"]
+
+  direction LR
+  
+  e0("empathy") --> sh0("self harm thoughts") 
+  
+  end
+  
+  style e0 fill:#374EA2,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  style e1 fill:#374EA2,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  style sh0 fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  style sh1 fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
+
+  style maltreatment fill:#D9D9D9,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  style nomaltreatment fill:#D9D9D9,stroke:#000000,stroke-width:2px,color:#000000;
+
+  linkStyle 0,1 stroke:#000000,stroke-width:3px,font-size:36px,color:black;
+
+```
+:::
+
+
+
+:::{focus-on="cr-overall"}
 **Results:** 
 
 There was an interesting and complex pattern of results.
+:::
 
-![overall results](overall.png){width=80%}
+:::{#cr-overall .scale-to-fill}
+![overall results](overall.png)
+:::
 
+:::{focus-on="cr-maltreatment"}
 Adults with early childhood maltreatment history were more likely to report self-harm thoughts than those without the history (χ² = 14.87, p < .01). 
+:::
 
+:::{#cr-maltreatment .scale-to-fill}
 ![maltreatment](maltreatment.png){width=80%}
+:::
 
+:::{focus-on="cr-empathy"}
 A significant nonlinear association was observed between empathy and self-harm thoughts (edf = 2.14 χ² = 9.67, p = .02).
+:::
 
+:::{#cr-empathy .scale-to-fill}
 ![empathy](empathy.png){width=80%}
+:::
 
-Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups. Risk for self-harm thoughts was highest among individuals with high empathy. Risk for self-harm thoughts was nearly as high for individuals with low empathy.
+:::{focus-on="cr-empathy" pan-to="-15%,-25%" scale-by="1.5"}
+Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups. 
+:::
 
-**Conclusion:** While a moderate level of empathy can be protective from early childhood maltreatment, both low and high levels of empathy were associated with a greater risk for self-harm thoughts. Findings suggest the need to further investigate the role of empathy as a “risky strength” among adults.
+:::{focus-on="cr-empathy" pan-to="-45%,-5%" scale-by="1.5"}
+Risk for self-harm thoughts was highest among individuals with high empathy. 
+:::
 
-![overall results](overall.png){width=80%}
+:::{focus-on="cr-empathy" pan-to="15%,-5%" scale-by="2.0"}
+Risk for self-harm thoughts was also somewhat high for individuals with low empathy.
+:::
 
+:::{focus-on="cr-overall"}
+**Conclusion:** While a moderate level of empathy can be protective from early childhood maltreatment, both low and high levels of empathy were associated with a greater risk for self-harm thoughts.
+
+Findings suggest the need to further investigate the role of empathy as a “risky strength” among adults.
+:::
+
+
+:::
