use markdown+emoji :arrow_down: to trigger first animation (mermaid chart)

--- a/empathy/empathy.qmd
+++ b/empathy/empathy.qmd
@@ -15,9 +15,14 @@ format:
       narrative-background-color-sidebar: white
       section-background-color: white
 css: empathy.css
+from: markdown+emoji
 ---
 
 :::{.cr-section}
+
+:::{focus-on="cr-research-question"}
+<span style="font-size:55px;color:#E2231A;text-align:center;">:arrow_down:</span>
+:::
 
 :::{focus-on="cr-research-question"}
 # Objective
