--- a/empathy/empathy.bib
+++ b/empathy/empathy.bib
@@ -1,4 +1,4 @@
-@article{,
+@article{empathy,
    author = {Sunghyun Hong and Andrew Grogan-Kaylor and Moohyun Kim and Anna Bender and Shaddy Saba and Chi-Lin Yu and Lisa Fedina and Todd Herrenkohl},
    journal = {Child Maltreatment},
    title = {When Empathy Helps and Hurts: Non-Linear Associations Between Early Childhood Maltreatment History, Empathy and Self-Harm Thoughts}
