FIRST COMMIT AS QMD

--- a/multivariate/multivariate.qmd
+++ b/multivariate/multivariate.qmd
@@ -1,4 +1,15 @@
-# Why Do We Need Multivariate Models To Evaluate Interventions?
+---
+title: "Why Do We Need Multivariate Models To Evaluate Interventions?"
+author: 
+  - name: "Andy Grogan-Kaylor"
+    url: https://agrogan1.github.io/
+date: "today"
+format: html
+mermaid:
+  theme: forest
+---
+
+# Introduction
 
 Across the world, there is a great deal of suffering. Many people have mental health issues or substance use issues. People often suffer the after effects of discrimination, poverty, trauma, violence or conflict.
 
@@ -12,7 +23,7 @@ In its simplest form, an evaluation might consist of having one group of people-
 
 [^ethics]: Valid questions could be raised about the *ethics* of such an approach, specifically denying participation in the *program* to one group of people. If a program is of unknown benefit, it is *ethical* to evaluate this program with a comparison group approach, because it is *not yet known* whether the program confers benefit on its participants, and whether the program represents a valid use of time, energy and financial resources. Indeed, an evaluation might uncover the fact that the program has no beneficial effects, or even that the program is harmful! Once a program has been established as beneficial, it would likely be *unethical* to conduct an evaluation where the program is withheld from some participants. 
 
-```mermaid
+```{mermaid}
 ---
 config:
   look: handDrawn
@@ -33,7 +44,7 @@ flowchart LR
 
 One big question or concern in conducting an evaluation of this type is that our group of participants may be composed of different subgroups of individuals. These groups might be different in that they might repsresent individuals of different racial, ethnic or gender identities, might be people from different communities, or might have quite different sets of past experiences. 
 
-```mermaid
+```{mermaid}
 ---
 config:
   look: handDrawn
@@ -54,7 +65,7 @@ flowchart TB
 
 
 
-```mermaid
+```{mermaid}
 ---
 config:
   look: handDrawn
