--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -176,3 +176,48 @@ model building},
   url = {https://doi.org/10.1038/nrn3475},
   year = {2013},
 }
+
+@Article{Henrich2010,
+  abstract = {Behavioral scientists routinely publish broad claims about human psychology and behavior in the world's top journals based on samples drawn entirely from Western, Educated, Industrialized, Rich and Democratic (WEIRD) societies. Researchers - often implicitly - assume that either there is little variation across human populations, or that these “standard subjects” are as representative of the species as any other population. Are these assumptions justified? Here, our review of the comparative database from across the behavioral sciences suggests both that there is substantial variability in experimental results across populations and that WEIRD subjects are particularly unusual compared with the rest of the species - frequent outliers. The domains reviewed include visual perception, fairness, cooperation, spatial reasoning, categorization and inferential induction, moral reasoning, reasoning styles, self-concepts and related motivations, and the heritability of IQ. The findings suggest that members of WEIRD societies, including young children, are among the least representative populations one could find for generalizing about humans. Many of these findings involve domains that are associated with fundamental aspects of psychology, motivation, and behavior - hence, there are no obvious a priori grounds for claiming that a particular behavioral phenomenon is universal based on sampling from a single subpopulation. Overall, these empirical patterns suggests that we need to be less cavalier in addressing questions of human nature on the basis of data drawn from this particularly thin, and rather unusual, slice of humanity. We close by proposing ways to structurally re‐organize the behavioral sciences to best tackle these challenges.},
+  archiveprefix = {arXiv},
+  arxivid = {arXiv:1011.1669v3},
+  author = {Joseph Henrich and Steven J. Heine and Ara Norenzayan},
+  journal = {Behavioral and Brain Sciences},
+  doi = {10.1017/S0140525X0999152X},
+  eprint = {arXiv:1011.1669v3},
+  isbn = {0140-525X},
+  issn = {14691825},
+  keywords = {behavioral economics,cross-cultural research,cultural psychology,culture,evolutionary psychology,experiments,external validity,generalizability,human universals,population variability},
+  pmid = {20550733},
+  title = {{The weirdest people in the world?}},
+  year = {2010},
+}
+
+@Article{Draper2022,
+  abstract = {Abstract It has become increasingly apparent that publishing research on child development from certain countries is especially challenging. These countries have been referred to collectively as the Majority World, the Global South, non-WEIRD (Western, Educated, Industrial, Rich, and Democratic), or low- and middle-income countries. The aim of this paper is to draw attention to these persistent challenges, and provide constructive recommendations to contribute to better representation of children from these countries in child development research. In this paper, we outline the history of publication bias in developmental science, and issues of generalization of research from these countries and hence where it ?fits? in terms of publishing. The importance of explaining context is highlighted, including for research on measurement child development outcomes, and attention is drawn to the vicious publication-funding cycle that further exacerbates the challenges of publishing this research. Specific recommendations are made to assist child development journals achieve their stated goals of creating a more inclusive, equitable, diverse, and global field of child development.},
+  author = {Catherine E Draper and Lisa M Barnett and Caylee J Cook and Jorge A Cuartas and Steven J Howard and Dana C McCoy and Rebecca Merkley and Andres Molano and Carolina Maldonado-Carreño and Jelena Obradovic and Gaia Scerif and Nadia C Valentini and Fotini Venetsanou and Aisha K Yousafzai},
+  doi = {10.1002/icd.2375},
+  issn = {1522-7227},
+  issue = {n/a},
+  journal = {Infant and Child Development},
+  keywords = {Global South,LMIC,Majority World,WEIRD,publication bias},
+  month = {10},
+  note = {https://doi.org/10.1002/icd.2375},
+  pages = {e2375},
+  publisher = {John Wiley & Sons, Ltd},
+  title = {Publishing child development research from around the world: An unfair playing field resulting in most of the world's child population under-represented in research},
+  volume = {n/a},
+  url = {https://doi.org/10.1002/icd.2375},
+  year = {2022},
+}
+
+@Book{Antweiler2016,
+  abstract = {Since the politicization of anthropology in the 1970s, most anthropologists have been reluctant to approach the topic of universals - that is, phenomena that occur regularly in all known human societies. In this volume, Christoph Antweiler reasserts the importance of these cross-cultural commonalities for anthropological research and for life and co-existence beyond the academy. The question presented here is how anthropology can help us approach humanity in its entirety, understanding the world less as a globe, with an emphasis on difference, but as a planet, from a vantage point open to commonalities. -- from back cover.},
+  author = {Christoph Antweiler},
+  city = {New York, NY},
+  isbn = {9781785330933},
+  keywords = {Anthropology -- Philosophy.,Anthropology Philosophy.,Civilization -- History.,Civilization History.,Civilization.,History.,Humanities | Philosophy,Universals (Philosophy)},
+  publisher = {Berghahn},
+  title = {Our common denominator: human universals revisited},
+  year = {2016},
+}
